# ethicsbot

./: .env.example  .gitignore  Makefile  Modelfile  README.md  pyproject.toml
data/incidents/: seed_incidents.jsonl
extension/: background.js  content.js  manifest.json
src/ethics_engine/: analyze.py  cli.py  config.py  embeddings.py  llm.py  prompt.py  store.py
src/ethics_engine/api/: __init__.py  main.py
src/ethics_engine/prompts/: claims.py  watchdog.py
src/ethics_engine/telemetry/: promptlog.py  telemetry.py  telemetry_context.py
src/ethics_engine/ui/: app.py
src/ethics_engine/watchdog/: claims.py  extract.py  features.py  pipeline.py  report.py  schemas.py
tests/: test_api.py  test_assess_route.py  test_import.py
